force-app/main/default/objects/Project_Item__c/Project_Item__c.object-meta.xml
<CustomObject>
    <description>Junction object between Project and Item, with Master-Detail relationship to Project. Needed to support many-to-many relationships between these objects.</description>
    <label>Project Item</label>
    <nameField>
        <displayFormat>PRI-{000000}</displayFormat>
        <label>Project Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>