force-app/main/default/objects/Project_Item__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>PDLM__Item__c</referenceTo>
    <relationshipLabel>Project Items</relationshipLabel>
    <relationshipName>Project_Items</relationshipName>
    <type>Lookup</type>
</CustomField>